# omn-agent

./: .gitignore  Pipfile  README.md  llm.py  main.py  requirements.txt
backend/: pyproject.toml
backend/src/agent/: __init__.py  cli.py
backend/src/agent/core/: state.py
backend/src/agent/graph/: __init__.py  workflow.py
backend/src/agent/llm/: llm.py
backend/src/agent/nodes/: __init__.py  executor_node.py  planner_node.py  reflection_node.py  review_node.py  safety_node.py
backend/src/agent/prompts/: __init__.py  executor_prompt.py  planner_prompt.py  reflection_prompt.py  review_prompt.py  safety_prompt.py
backend/src/agent/schemas/: __init__.py  safety.py
backend/src/agent/tools/: __init__.py
backend/src/agent/tools/FileToolManager/: __init__.py  manager.py  tools.py
backend/src/agent/tools/GitToolManager/: __init__.py  manager.py  tools.py
backend/src/agent/tools/file_tools/: __init__.py
core/: __init__.py  graph.py  nodes.py  state.py
desktop/: index.html  main.js  package.json
nodes/: __init__.py  executor_node.py  planner_node.py  safety_node.py
prompts/: __init__.py  executor_prompt.py  planner_prompt.py  safety_prompt.py
tools/: __init__.py  models.py  ping.py
tools/FileToolManager/: manager.py  tools.py
tools/GitToolManager/: manager.py
tools/file_tools/: dir_tools.py
