[project]
name = "agent"
version = "0.1.0"
description = "AI Agent with LangGraph and Ollama"
requires-python = ">=3.10"
dependencies = [
    "langchain>=1.0",
    "langgraph>=1.0",
    "ollama>=0.6",
    "httpx>=0.28",
    "pydantic>=2.12",
    "nltk>=3.0",
]

[project.optional-dependencies]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent"]
